--- a/japTest/src/main/resources/static/css/init.css
+++ b/japTest/src/main/resources/static/css/init.css
@@ -1,11 +1,11 @@
+/*  init.css */
 *{
     padding:0;
     margin:0;
     box-sizing:border-box;
 }
-
-ul{list-style-type:none;}
-a{text-decoration : none; color:inherit;}
+ul{ list-style-type:none; }
+a{ text-decoration:none; color: inherit;}
 
 #wrap{
     width:1000px;
@@ -15,7 +15,6 @@ a{text-decoration : none; color:inherit;}
     padding-top:50px;
     overflow:hidden;
 }
-
 #header{
     width:200px;
     padding:50px 10px;
@@ -23,9 +22,11 @@ a{text-decoration : none; color:inherit;}
     color:white;
     position:relative;
     left:0;
-    transition: all 1s;
+    transition:all 1s;
 }
-
+#nav{
+    width:100%;
+}
 #menuList{
     padding:20px 0;
 }
@@ -37,50 +38,36 @@ a{text-decoration : none; color:inherit;}
 }
 .menu:hover{
     background:#e54f4f;
-    border:2px solid #aaa;
-
+    border-bottom:2px solid #aaa;
 }
-/*메뉴 아이콘 기능에 필요 css*/
+/*  메뉴 아이콘 기능에 필요 css */
 #menuIcon{
     position:absolute;
-    top:0; left:20px;
+    top:0;  left:20px;
 }
-
 #header.slide{
     width:0;
     left:-200px;
 }
-
 #main.full{
-    width:100%
-}
-
-
-#nav{
     width:100%;
 }
+
+
 
 #main{
     width:800px;
 }
 
-img{width:100% display:block;}
-
+img{width:100%; display:block;}
 #container{
     display:grid;
-    grid-template-columns : repeat(3, 1fr);
-    gab: 10px;
-
+    grid-template-columns:repeat(3,1fr);
+    gap:10px;
 }
-
 .items{
     height:200px;
     overflow:hidden;
 }
-
-.items:nth-child(4){grid-column:1/4;}
-.items:nth-child(8){grid-column:1/3;}
-/* 위 두 방법은 아래와 같다.
-.items:nth-child(4){grid-column:span 3;}
-.items:nth-child(8){grid-column:span 2;}
-*/
+.items:nth-child(4){ grid-column:1/4;}
+.items:nth-child(8){ grid-column:1/3;}
