--- a/security/src/main/resources/templates/login.html
+++ b/security/src/main/resources/templates/login.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th ="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>로그인</title>
 </head>
 <body>
-    <h1>로그인</h1>
-    <form method="post" acrion="/login_chk">
-        아이디 : <input type="text" name="id"> <br>
-        비밀번호 : <input type="password" name="pw"> <br>
-
-        <button>로그인</button>
-
-    </form>
+<h1>로그인</h1>
+<form method="post" action="/login_chk">
+    아이디 : <input type="text" name="id"> <br>
+    비밀번호 : <input type="password" name="pw"> <br>
+    <button type="submit">로그인</button>
+</form>
 </body>
 </html>
