--- a/security/src/main/resources/templates/login.html
+++ b/security/src/main/resources/templates/login.html
@@ -7,6 +7,7 @@
 <body>
 <h1>로그인</h1>
 <form method="post" action="/login_chk">
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
     아이디 : <input type="text" name="id"> <br>
     비밀번호 : <input type="password" name="pw"> <br>
     <button type="submit">로그인</button>
