--- a/security/src/main/resources/templates/signUp.html
+++ b/security/src/main/resources/templates/signUp.html
@@ -7,6 +7,10 @@
 <body>
     <h1>회원가입 페이지</h1>
     <form method="post" action="/signUp" th:object="${memberDto}">
+        <!--만약 중요 데이터를 포함하는 경우에는 post로 사용해야 한다.
+        단 이 경우, csrf 토큰이 필요함. 이걸 지정하기위해 form 바로 밑에 자리 잡아주는게 가독성도 좋아-->
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+
         아이디 : <input type="text" th:field ="*{userId}"> <br>
             <p th:if="${#fields.hasErrors('userId')}" th:errors="*{userId}"> </p>
         비밀번호 : <input type="password" th:field ="*{password}"> <br>
