--- a/shop/src/main/resources/templates/member/login.html
+++ b/shop/src/main/resources/templates/member/login.html
@@ -14,15 +14,20 @@
 <div layout:fragment="main" id="main">
 
     <div id="loginWrap">
-        <form method="post" action="/member/signIn" th:object="${memberLogin}">
+        <form method="post" action="/member/signIn">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
             <div class="formData">
                 <div class="formTitle">로그인</div>
                 <div class="inputField">
-                    <input type="text" th:field="*{userId}" placeholder="ID">
+                    <input type="text" name="userId" id="userId" placeholder="ID">
                 </div>
                 <div class="inputField">
-                    <input type="password" th:field="*{password}" placeholder="PASSWORD">
+                    <input type="password" name="password" id="password" placeholder="PASSWORD">
                 </div>
+
+                <p th:if="${loginFailMsg}" th:text="${loginFailMsg}"
+                    style="color:red; padding-bottom:20px;">
+                </p>
                 <div class="loginBt">
                     <button>Login</button>
                 </div>
