--- a/shop/src/main/resources/static/css/cart.css
+++ b/shop/src/main/resources/static/css/cart.css
@@ -30,7 +30,7 @@ h2 {
 #cartTable td:nth-child(5){
     width:100px;
 }
-#cartTable td input{
+#cartTable td:nth-child(5) input{
     border:0;
     border-bottom:1px solid black;
     font-size:17px;
@@ -68,4 +68,31 @@ h2 {
 
 #checkoutButton:hover {
     background-color: #218838;
+}
+
+
+.tab-menu {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 20px; /* 탭과 제목 사이의 여백 */
+    border-bottom: 2px solid #ddd;
+}
+
+.tab {
+    padding: 10px 20px;
+    margin-right: 10px;
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+    border-bottom: 3px solid transparent;
+}
+
+.tab:hover {
+    color: #007bff;
+    border-color: #007bff;
+}
+
+.tab.active {
+    color: #007bff;
+    border-color: #007bff;
 }
