--- a/shop/src/main/resources/templates/item/detail.html
+++ b/shop/src/main/resources/templates/item/detail.html
@@ -51,7 +51,37 @@
             }
 
             function addOrder(){ // 즉시 주문하기
+                var url = "/order";
 
+                var paramData = {  // 즉시 주문하기 위해 서버에 전달할 데이터객체
+                    itemId : $("#itemId").val(),
+                    quantity : $("#quantity").val()
+                }
+                var param = JSON.stringify(paramData); // JSON 으로 변환
+                var token = $("meta[name='_csrf']").attr("content");
+                var header = $("meta[name='_csrf_header']").attr("content");
+
+                $.ajax({
+                    url : url,
+                    type : "POST",
+                    data : param,
+                    contentType : "application/json",
+                    dataType : "json",
+                    beforeSend : function(xhr){
+                        xhr.setRequestHeader( header, token); // 전송전에 헤더에 csrf설정
+                    },
+                    cache : false ,
+                    success : function( result, status){ // 전송 성공시
+                        alert("주문 완료되었습니다.");
+                    },
+                    error : function( jqXHR , status, error){ // 전송 실패시
+                        if( jqXHR.status == "200"){
+                            alert("로그인 후 이용하세요");
+                        }else{
+                            alert( jqXHR.responseText );
+                        }
+                    }
+                });
             }
 
         </script>
